syntax = "proto3";

option java_package = "com.kuaishou.protobuf.mmu.common";
option java_outer_classname = "MessageEntry";
option java_multiple_files = true;

package mmu.common;

import "mmu/media_common.proto";
//import "mmu/face_recognization.proto";

//message FacePortrait {
//  double gender_prob = 1;
//  int32 avg_age = 2;
//  double face_value = 3;
//}
//
//message FaceProperty {
//  double gender_prob = 1; //性别
//  int32 avg_age = 2; //年龄
//  double face_value = 3; //颜值
//  double smile_prob = 4; //微笑
//  double on_glass_prob = 5; //眼镜
//  int32 area = 6; //人脸面积
//  float area_ratio = 7; //人脸面积比例
//  float clear = 8; //清晰度
//  float face_true = 9; //真实人脸概率
//  double ugly_prob = 10;
//  double star_prob = 11; // 明星人脸
//  float occlusion = 12; // 遮挡
//  mmu.common.Location location = 13; //位置
//  double yaw = 14;
//  double pitch = 15;
//  double roll = 16;
//  string img_id = 17;
//  mmu.img.Glass new_glass = 18; //glass类型
//  int32 angle = 19; //人脸角度,逆时针
//  mmu.img.Age age = 20;
//}
//
//message FaceAge {
//  mmu.common.Location location = 1;
//  mmu.img.Age age = 2;
//  repeated float age_prob = 3;
//}
//
//message HumanBody {
//  int32 back = 1; // 0 back; 1 front; 2 side
//  mmu.common.Location location = 2;
//}
//
//message FrameHumanBody {
//  string id = 1;
//  repeated HumanBody human_body = 2;
//}
//
//message HumanPose {
//  mmu.common.Location location = 1;
//  float location_prob = 2;
//  repeated Point points = 3;
//}
//
//message FrameHumanPose {
//  string id = 1;
//  repeated HumanPose human_pose = 2;
//}

message PropertyItem {
  uint64 audio_content_id = 1;
  repeated string text_cluster = 2;
  repeated string audio_cluster = 3;
  repeated uint32 tag_id = 4; //多标签
  repeated string action_cluster = 5; //多帧聚类
}

message EmbeddingEntry {
  repeated float feature = 2;
}

message ClusterItem {
  string cluster_id = 1;
  float prob = 2;
}

message ClusterItems {
  repeated ClusterItem item = 1;
}

message EmbeddingClusterEntry {
  repeated float feature = 2;
  repeated ClusterItem cluster = 1;
}

message TagEntry {
  uint32 tag_id = 1;
  string tag_name = 2;
  uint32 parent_id = 3;
  float prob = 4;
  int32 level = 5;
  string parent_name = 6;
}

message PhotoTagInfo {
  uint64 photo_id = 1;
  repeated TagEntry tag = 2;
}

message TagEntryList {
  repeated TagEntry tag_entry = 1;
}

message CategoryEntry {
  uint64 category_id = 1;
  string category_name = 2;
  uint64 parent_id = 3;
}

message CategoryEntryList {
  repeated CategoryEntry category_entry = 1;
}

message CategoryIds {
  repeated uint64 category_id = 1;
}

message TagIdList {
  repeated uint32 tag_id = 1;
}

message Empty {

}

message MusicId {
  uint64 music_id = 1;
  uint32 music_type = 2;
}

message MusicInfo {
  uint64 music_id = 1;
  uint32 music_type = 2;
  string song_name = 3;
}

enum AudioLanguage {
  UNKNOWN_LANGUAGE = 0;
  NOISE = 1; //杂音
  MUSIC = 2; //音乐
  MANDARIN = 3; //普通话
  NON_MANDARIN = 4; //非普通话
}

message ClassificationItem {
  uint32 max_index = 1;
  float max_prob = 2;
  map<uint32, float> top_index = 3;
  repeated float prob = 4;
}

message OcrItem {
  mmu.common.Location location = 1;
  string words = 2;
  float prob = 3;
}

message FrameOcrItem {
  string id = 1;
  repeated OcrItem ocr_item = 2;
  string frame_words = 3;
  int32 frame_width = 4;
  int32 frame_height = 5;
}

message CategoryResult {
  uint64 photo_id = 1;
  uint32 tag_id = 2;
  float prob = 3;
  uint64 timestamp = 4;
}

message MusicTag {
  string tag = 1; //标签名
  float prob = 2; //概率
  int32 flag = 3;
  int32 tag_id = 4;
}

// 用于在缓存中存储list
message CacheInfo {
  repeated uint64 id = 1;
}

// 搜索相关特征
message SearchInfo {
  string keyword = 1; // 关键词
  uint64 user_id = 2; // 用户ID
}

message TermWeight {
  string term = 1;
  int32 weight = 2;
}

message TermWeightList {
  repeated TermWeight entry = 1;
}

message Language {
  string name = 1;
  double score = 2;
}

message UnionAudioId {
  string afid = 1;
  repeated uint64 label_id = 2;
  Language language = 3;
}

message UserProfileEmb {
  repeated float head_age_prob = 1;
  repeated float head_feature = 2;
}

message QualityScore {
  uint32 type = 1;
  float score = 2;
}

message PhotoTabEmbedding {
  uint64 photo_id = 1;
  uint64 tab_id = 2;
  repeated float feature = 3;
  uint64 timestamp = 4;
}

message LocationRatio {
  float left_ratio = 1; //位置框左顶点距离图片左边框的位置比例
  float top_ratio = 2; //位置框左顶点距离图片上边框的位置比例
  float width_ratio = 3; //位置框宽度占图片宽度的比例
  float height_ratio = 4; //位置框高度占图片高度的比例
}

message CnnEmbFloatArray {
  repeated float float_elems = 1 [packed = true];
}

message ImgRetrievalCnnEmb {
  enum CnnEmbType {
    UNKNOWN = 0;
    NORMAL = 1; // 正常
    MOVING_AREA = 2; // 运动区域
  }
  uint64 photo_id = 1;
  string frame_id = 2;
  uint64 publish_time = 3; // 视频发布时间
  CnnEmbType emb_type = 4;
  repeated float embedding = 5; // 帧id与embedding映射
  map<string, string> params = 6;
  uint64 timestamp = 7;
}
